<resources>
    <string name="app_name">Password Wallet</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="sign_in_underline"><u>Sign in</u></string>

    <string name="already_have">Already have an account?</string>
    <string name="do_not_have">Don\'t have an account?</string>

    <string name="change_master_password"><u>Change master password</u></string>

    <string name="edit_mode_enabled">Edit mode</string>
    <string name="ready_only">Read only</string>

    <string name="shared_with">This password is shared with:</string>
    <string name="belongs_to">This password belongs to:</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="description">Description</string>

    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="share_with">Share with</string>
    <string name="action">Action</string>

    <string name="date">Date</string>
    <string name="previous_value">Previous value</string>
    <string name="new_value">New value</string>
    <string name="recover">Recover</string>



</resources>